# cpp-component-core-uncopyable

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  biicode.conf
doc/example/: uncopyable_mixin_example.cc
example/fw/core/: uncopyable_mixin_example.cc
include/fw/core/: uncopyable_mixin.h
test/fw/core/: uncopyable_mixin_test.cc
